js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-block-import-source-no-new-call-expression.js
DONOTEVALUATE
(
)
;
{
new
import
.
source
(
'
<
module
source
>
'
)
;
}
;
